# USD-Resources

./: .gitignore  CMakeLists.txt  README.md
cmake/: createTarget.cmake
codeProc/: CMakeLists.txt
codeProc/gui/: CMakeLists.txt  __init__.py  dialog.py  editor.py
codeProc/ocl/: CmakeLists.txt  genUsdTypeDefs.py  usdTypes.h
codeProc/testenv/: genCodeProc.py
codeProc/usd/: CMakeLists.txt  __init__.py  api.h  codeProceduralAPI.cpp  codeProceduralAPI.h  codeProceduralAPIAdapter.cpp  codeProceduralAPIAdapter.h  codeProceduralDataSources.cpp  codeProceduralDataSources.h  codeProceduralDeformer.cpp  codeProceduralDeformer.h  codeProceduralDeformerArguments.h  codeProceduralSceneIndex.cpp  codeProceduralSceneIndex.h  codeProceduralSceneIndexPlugin.cpp  codeProceduralSceneIndexPlugin.h  codeProceduralSchema.cpp  codeProceduralSchema.h  generatedSchema.usda  module.cpp  moduleDeps.cpp  peacyoclUtils.h  plugInfo.json  plugInfoHoudini.json  schema.usda  tokens.cpp  tokens.h  wrapCodeProceduralAPI.cpp  wrapPeasyoclUtils.cpp  wrapTokens.cpp
hairProc/: .gitignore  CMakeLists.txt  README.md
hairProc/cmake/: createTarget.cmake
hairProc/kernels/: hairProc.cl
hairProc/ocl/: CMakeLists.txt  CmakeLists.txt  DeformerContext.cpp  DeformerContext.h  KernelUtils.h
hairProc/ocl/kernels/: hairProc.cl
hairProc/testenv/: genHairProc.py  hairProc.usda  tubeTest.usdnc
hairProc/usd/: CMakeLists.txt  generatedSchema.usda  hairProceduralAPI.cpp  hairProceduralAPI.h  hairProceduralAPIAdapter.cpp  hairProceduralAPIAdapter.h  hairProceduralDataSources.cpp  hairProceduralDataSources.h  hairProceduralDeformer.cpp  hairProceduralDeformer.h  hairProceduralSceneIndex.cpp  hairProceduralSceneIndex.h  hairProceduralSceneIndexPlugin.cpp  hairProceduralSchema.cpp  hairProceduralSchema.h  moduleDeps.cpp  plugInfo.json  plugInfoHoudini.json  schema.usda  tokens.cpp  tokens.h  wrapHairProceduralAPI.cpp  wrapTokens.cpp
hairProc/usd/cmake/: config.cmake
src/: hairProceduralAPI.cpp  hairProceduralDataSources.cpp  hairProceduralDeformer.cpp  hairProceduralDeformer.h  hairProceduralSceneIndexPlugin.h  hairProceduralSchema.cpp  hairProceduralSchema.h  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda
testenv/: genHairProc.py  hairProc.usda
vik/: CMakeLists.txt  __init__.py  api.h  generatedSchema.usda  hairProcedural.cpp  hairProcedural.h  hairProceduralAPI.cpp  hairProceduralAPI.h  hairProceduralAPIAdapter.cpp  hairProceduralAPIAdapter.h  hairProceduralDataSources.h  hairProceduralDeformer.cpp  hairProceduralDeformer.h  hairProceduralSceneIndex.cpp  hairProceduralSceneIndex.h  hairProceduralSceneIndexPlugin.cpp  hairProceduralSceneIndexPlugin.h  hairProceduralSchema.cpp  hairProceduralSchema.h  module.cpp  moduleDeps.cpp  plugInfo.json  schema.usda  tokens.cpp  tokens.h  wrapHairProcedural.cpp  wrapHairProceduralAPI.cpp  wrapTokens.cpp
