cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
project(hairProc VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(USDPLUGIN_NAME hairProc)
set(PYPACKAGE_NAME vik)

# PY MODULE NAME
string(SUBSTRING ${USDPLUGIN_NAME} 0 1 LIBNAME_FL)
string(SUBSTRING ${USDPLUGIN_NAME} 0 1 LIBNAME_FL)
string(TOUPPER ${LIBNAME_FL} LIBNAME_FL)
string(SUBSTRING ${USDPLUGIN_NAME} 1 -1 LIBNAME_SUFFIX)
set(MODULE_NAME
    "${LIBNAME_FL}${LIBNAME_SUFFIX}"
)

set(USDIMAGINGGL_ENGINE_ENABLE_SCENE_INDEX true)

set(USD_INSTALL_ROOT /opt/USD)
set(CMAKE_INSTALL_PREFIX "/opt/USD_resources" CACHE PATH "..." FORCE)

# add_definitions(-D_GLIBCXX_USE_CXX_ABI=0)
# add_definitions(-DUSDIMAGINGGL_ENGINE_ENABLE_SCENE_INDEX=true)

add_subdirectory(src)